CS35200/tests/project2_3_tests/neg/no_method.java
class Foo {
    public static void main(String[] args) {
        Bar a = new Bar();
        a.hello();
    }
}

class Bar {
}